--- a/semicolonLab/css/style.css
+++ b/semicolonLab/css/style.css
@@ -11,11 +11,11 @@ html,body {height: 100%;}
 body {
 	margin: 0px;
 	padding: 0px;
-	color: #333;	/*全体の文字色*/
+	color: #61677A;	/*全体の文字色*/
 	font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;	/*フォント種類*/
 	font-size: 16px;	/*文字サイズ*/
 	line-height: 2;		/*行間*/
-	background: #f0f0f0;	/*背景色*/
+	background: #FFF6E0;	/*背景色*/
 	-webkit-text-size-adjust: none;
 }
 h1,h2,h3,h4,h5,p,ul,ol,li,dl,dt,dd,form,figure,form {margin: 0px;padding: 0px;font-size: 100%;font-weight: normal;}
@@ -37,7 +37,7 @@ a {
 	transition: 0.5s;	/*マウスオン時の移り変わるまでの時間設定。0.5秒。*/
 }
 a:hover {
-	color: #ff4765;			/*マウスオン時の文字色*/
+	color: #272829;			/*マウスオン時の文字色*/
 	text-decoration: none;	/*マウスオン時に下線を消す設定。残したいならこの１行削除。*/
 }
 
