--- a/semicolonLab/css/style.css
+++ b/semicolonLab/css/style.css
@@ -54,7 +54,7 @@ header #logo img {
 	display: block;
 	width: 50%;	/*画像の幅*/
 	position: absolute;
-	/*left: 40%;	ロゴやメニューが入っているブロックに対して、左からの配置場所の指定。*/
+	left: 30%;	/*ロゴやメニューが入っているブロックに対して、左からの配置場所の指定。*/
 	bottom: 50%;	/*ロゴやメニューが入っているブロックに対して、下からの配置場所の指定。*/
 }
 
@@ -162,12 +162,6 @@ header #logo img {
 	margin-bottom: 10px;
 }
 /*画像の設定*/
-.about aboutimg {
-		width: 30%;			/*画像幅*/
-		float: left;		/*画像を左に回り込み*/
-		margin-right: 3%	/*画像の右側に空けるスペース*/
-}
-
 .list img {
 	width: 50%;			/*画像幅*/
 	float: left;		/*画像を左に回り込み*/
